--- a/package.json
+++ b/package.json
@@ -9,25 +9,37 @@
     "@babel/core": "^7.11.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^10.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
+    "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^4.1.0",
     "mongoose": "^5.10.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.0"
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^4.0.2",
+    "pug": "^3.0.0",
+    "sass-loader": "^10.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "mini-css-extract-plugin": "^0.11.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2"
   }
